2004-07-20  Not Zed  <NotZed@Ximian.com>

	* gui/widgets/eab-contact-display.c: 
	* gui/contact-editor/eab-editor.c: 
	* gui/component/addressbook-migrate.c: include config.h #61395.

2004-07-21  Chris Toshok  <toshok@ximian.com>

	[ fixes #60508 ]
	
	* gui/component/addressbook-config.h: reorder the Scopes so that
	they match the option menu.

	* gui/component/ldap-config.glade: change the scope option menu to
	only display One and Sub, and also set the Login field to Lo_gin
	in both dialogs.  Add accelerators for the details page as well.

2004-07-21  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/contact-editor.glade:
	Give a reasonable name to the widget for the _Where label

	* gui/contact-editor/e-contact-editor.c (e_contact_editor_init):
	Set the mnemonic widget for the _Where label

	Fixes #61544

2004-07-20  JP Rosevear  <jpr@novell.com>

	* gui/component/autocompletion-config.c
	(autocompletion_config_control_new): don't set the toggle
	selection

2004-07-16  Hans Petter Jansson  <hpj@ximian.com>

	* gui/contact-editor/e-contact-editor.c (contact_added_cb)
	(save_contact)
	(app_delete_event_cb): Check source book writeability directly instead
	of relying on stored state.
	(e_contact_editor_init): Don't init source_editable.
	(e_contact_editor_dispose): We don't listen for source writeability
	anymore.
	(writable_changed): Source writeability doesn't affect widget
	status; remove code to check for it.
	(e_contact_editor_set_property): Do nothing if book being set is
	the same as currently set book; previously we would end up
	unreffing then reffing it. Don't watch for source writeability, but
	do so for target; fixes a warning. Only call sensitize_all() if
	writeability on target changed.

	* gui/contact-editor/e-contact-editor.h (EContactEditor): We don't
	need the source_editable and source_editable_id vars anymore.

2004-07-14  Chris Toshok  <toshok@ximian.com>

	[ fixes #60873, and possibly other crashes ]
	